syntax = "proto3";

package admin;

option go_package = "message/proto";

message EbulkSms {
}

message BulkSms {
}
message EbulkSmsResponse {
    string response = 1;
}

message BulkSmsResponse {
    string response = 1;
}

service SmsServices {
    rpc EbulkSmsWallet(EbulkSms) returns (stream EbulkSmsResponse){}
    rpc BulkSmsWallet(BulkSms) returns (stream BulkSmsResponse){}
}